IF(PAL_EXAMPLES_DISPLAY)
	OPTION(PAL_BUILD_EXTRA_COLLADA "Set to ON to build PAL COLLADA extra." ON)
	OPTION(PAL_BUILD_EXTRA_SCYTHE  "Set to ON to build PAL Scythe extra."  ON)

	IF(PAL_BUILD_EXTRA_COLLADA)
		ADD_SUBDIRECTORY(COLLADA_standalone)
	ENDIF()
	IF(PAL_BUILD_EXTRA_SCYTHE)
		ADD_SUBDIRECTORY(Scythe_standalone)
	ENDIF()
ENDIF()
